src/scss/components/_post-list.scss
.post-list {
  margin-top: 1.5rem;
  display: flex;
  flex-flow: column nowrap;
  gap: 2rem;

  &__items {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
    gap: 1rem;
    width: 100%;
    margin-bottom: 1rem;
  }

  &__item {
    display: flex;
    flex-flow: column nowrap;
    position: relative;
    justify-content: space-between;

    padding: 2rem 0 0 0;
    flex: 1;
    gap: 0.5rem;
    width: 100%;

    &::before {
      content: '';
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 2px;
      background: get-color('mid');
    }
  }

  &__details-container {
    display: flex;
    flex-flow: column nowrap;
    gap: 0.5rem;
  }

  &__title {
    order: 2;
    @include apply-utility('font', 'serif');
    font-size: get-size(700);
    font-weight: 400;
    @include apply-utility('leading', 'tight');
  }

  &__date {
    order: 1;
    font-size: get-size(500);
  }

  &__description {
    order: 3;
    font-size: get-size(500);
    @include apply-utility('leading', 'mid');
  }

  &__thumbnail {
    padding: 1rem 0;
    order: 4;
    width: 100%;
    object-fit: cover;
    aspect-ratio: 4 / 2;
  }

  &__link {
    &,
    &:visited {
      color: var(--color-theme-primary);
      text-decoration: none;
    }

    &:hover {
      text-decoration: underline;
    }
  }

  figcaption {
    display: none;
  }
}

